tried a few changes to get clear grid to work, but no success so far.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,8 +48,10 @@ table {
 }
 
 #gridContainer {
-	width:50vw;
-	padding-bottom: 50%;
+	width:800px;
+	padding-bottom: 800px;
+	border: 50px solid red;
+	border-radius: 50px;
 	height:0;
 	position: relative;
 }
