--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,6 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	background-color: grey;
 }
 ol, ul {
 	list-style: none;
@@ -47,22 +48,93 @@ table {
 	border-spacing: 0;
 }
 
-#gridContainer {
-	width:800px;
-	padding-bottom: 800px;
-	border: 50px solid red;
+#gridWrapper {
+	background-color: #ffffff;
+	width: 30vw;
+	height: 30vw;
+	/*height: 800px;*/
+	position: fixed;
+	top: 50%;
+	left: 50%;
 	border-radius: 50px;
-	height:0;
-	position: relative;
+	border: 50px solid rgb(7, 5, 124);
+	/* bring your own prefixes */
+	transform: translate(-50%, -50%);
 }
+
+#gameButtons {
+	width: 100%;
+	padding: -50%;
+	display: block;
+	float: left;
+	transform: translate(0, -180%);
+	display: flex;
+	justify-content: center;
+}
+
+button {
+	margin: 10px;
+	border: none;
+	width:80px;
+	height: 40px;
+	min-width: 80px;
+}
+
+#cellBlack {
+	color: #ffffff;
+	background-color: #000000;
+}
+
+#cellGradient {
+	color: white;
+}
+
+#cellRainbow {
+	/*background-image: linear-gradient(red, yellow);*/
+}
+#gridContainer {
+	width:100%;
+	height:0;
+}
+
 
 #grid {
 	position: absolute;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
+	top: 0; 
+	left: 0;
+	width: 100%; 
+	height: 100%;
     display: grid;
 }
 
-/* .gridCell {
-    border: solid 1px black;
-} */
+
+
+.slider {
+	-webkit-appearance: none;
+	width: 25%;
+	height: 15px;
+	border-radius: 5px;  
+	background: #d3d3d3;
+	outline: none;
+	opacity: 0.7;
+	-webkit-transition: .2s;
+	transition: opacity .2s;
+  }
+  
+  .slider::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	appearance: none;
+	width: 25px;
+	height: 25px;
+	border-radius: 50%; 
+	background: rgb(7, 5, 124);
+	cursor: pointer;
+  }
+  
+  .slider::-moz-range-thumb {
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+	background: rgb(7, 5, 124);
+	cursor: pointer;
+  }
