--- a/styles/styles.css
+++ b/styles/styles.css
@@ -85,12 +85,22 @@ button {
 	background-color: #000000;
 }
 
+#cellBlack:hover {
+	opacity: 0.8;
+}
+
+#cellBlack:active {
+	opacity: 0.6;
+}
+
 #cellGradient {
-	color: white;
+	color: #ffffff;
+	background-color: rgb(207, 207, 207);
 }
 
 #cellRainbow {
-	/*background-image: linear-gradient(red, yellow);*/
+	background-color: rgb(255, 166, 0);
+	color: #ffffff;
 }
 #gridContainer {
 	width:100%;
@@ -107,34 +117,15 @@ button {
     display: grid;
 }
 
+input[type=text], select {
+	width: 150px;
+	padding: 12px 20px;
+	margin: 8px 0;
+	display: inline-block;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
+  }
 
 
-.slider {
-	-webkit-appearance: none;
-	width: 25%;
-	height: 15px;
-	border-radius: 5px;  
-	background: #d3d3d3;
-	outline: none;
-	opacity: 0.7;
-	-webkit-transition: .2s;
-	transition: opacity .2s;
-  }
-  
-  .slider::-webkit-slider-thumb {
-	-webkit-appearance: none;
-	appearance: none;
-	width: 25px;
-	height: 25px;
-	border-radius: 50%; 
-	background: rgb(7, 5, 124);
-	cursor: pointer;
-  }
-  
-  .slider::-moz-range-thumb {
-	width: 25px;
-	height: 25px;
-	border-radius: 50%;
-	background: rgb(7, 5, 124);
-	cursor: pointer;
-  }
+
